--- a/tpl/admin/newsadd.html
+++ b/tpl/admin/newsadd.html
@@ -13,6 +13,9 @@
 	<script src="img/js/hideshow.js" type="text/javascript"></script>
 	<script src="img/js/jquery.tablesorter.min.js" type="text/javascript"></script>
 	<script type="text/javascript" src="img/js/jquery.equalHeight.js"></script>
+	<script charset="utf-8" src="img/js/ueditor/ueditor.config.js"></script>
+	<script charset="utf-8" src="img/js/ueditor/ueditor.all.js"> </script>
+	<script charset="utf-8" src="img/js/ueditor/lang/zh-cn/zh-cn.js"></script>
 	<script type="text/javascript">
 	$(document).ready(function() 
     	{ 
@@ -44,7 +47,9 @@
     $(function(){
         $('.column').equalHeight();
     });
-</script>
+    
+    var ue = UE.getEditor('editor');
+	</script>
 
 </head>
 
@@ -80,8 +85,8 @@
 								<input type="text" name="title" value="{$data.title|default:''}">
 							</fieldset>
 							<fieldset>
-								<label>内容</label>
-								<textarea rows="12" name="content">{$data.content|default:''}</textarea>
+								<textarea rows="12" name="content" style="display:none;">{$data.content|default:''}</textarea>
+								<script id="editor" type="text/plain"></script>
 							</fieldset>
 							<fieldset style="width:48%; float:left; margin-right: 3%;">
 								<label>作者</label>
