修改入口路径

--- a/tpl/admin/newsadd.html
+++ b/tpl/admin/newsadd.html
@@ -76,7 +76,7 @@
 	{include file='admin/leftmenu.html'}
 	
 	<section id="main" class="column">
-		<form id="form1" name="form1" method="post" action="admin.php?controller=admin&method=newsadd">
+		<form id="form1" name="form1" method="post" action="index.php?controller=admin&method=newsadd">
 			<article class="module width_full">
 				<header><h3>发表新文章</h3></header>
 					<div class="module_content">
