--- a/tpl/index.html
+++ b/tpl/index.html
@@ -10,6 +10,7 @@
 
 
 <body>
+<a href="index.php?controller=admin&method=index">后台登录</a>
 <table class="tablesorter" cellspacing="0" style="margin:0"> 
 	<thead> 
 		<tr>  
